@@ -16,35 +16,40 @@
 # You should have received a copy of the GNU General Public License
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
-#
+
 # This is the main backup-manager script. 
+#
+# $Revision$
+# $Date$
+# $Author$
 
 set -e
 
 VERSION="0.7.5"
 
-# All the path we'll need
+# All the paths we provide
 libdir="/usr/share/backup-manager"
 vardir="/var/lib/backup-manager"
-zip="/usr/bin/zip"
-bzip="/usr/bin/bzip2"
-gzip="/bin/gzip"
-gpg="/usr/bin/gpg"
-lzma="/usr/bin/lzma"
-dar="/usr/bin/dar"
-_7z="/usr/bin/7z"
-tar="/bin/tar"
-rsync="/usr/bin/rsync"
-mkisofs="/usr/bin/mkisofs"
-growisofs="/usr/bin/growisofs"
-dvdrwformat="/usr/bin/dvd+rw-format"
-cdrecord="/usr/bin/cdrecord"
 bmu="/usr/bin/backup-manager-upload"
-md5sum="/usr/bin/md5sum"
-bc="/usr/bin/bc"
-mysqldump="/usr/bin/mysqldump"
-svnadmin="/usr/bin/svnadmin"
-logger="/usr/bin/logger"
+
+# external programs (cannot be sure where the are)
+zip=$(which zip)
+bzip=$(which bzip2)
+gzip=$(which gzip)
+gpg=$(which gpg)
+lzma=$(which lzma)
+dar=$(which dar)
+tar=$(which tar)
+rsync=$(which rsync)
+mkisofs=$(which mkisofs)
+growisofs=$(which growisofs)
+dvdrwformat=$(which dvd+rw-format)
+cdrecord=$(which cdrecord)
+md5sum=$(which md5sum)
+bc=$(which bc)
+mysqldump=$(which mysqldump)
+svnadmin=$(which svnadmin)
+logger=$(which logger)
 
 # Find which lockfile to use
 # If we are called by an unprivileged user, use a lockfile inside the user's home;
